--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,17 @@
   ],
   "require": {
     "codeception/codeception": "4.0.2",
-    "phpunit/phpunit": "^7.0"
-  },
-  "require-dev": {
-    "codeception/module-filesystem": "^1.0",
-    "codeception/module-asserts": "^1.1",
-    "codeception/module-db": "^1.0"
+    "phpunit/phpunit": "^7.0",
+    "monolog/monolog": "~1.8",
+    "codeception/specify": "~0.3",
+    "squizlabs/php_codesniffer": "~2.0",
+    "vlucas/phpdotenv": "^2.0 | ^3.0 | ^4.0",
+    "symfony/process": ">=2.7 <6.0",
+    "codeception/module-asserts": "*@dev",
+    "codeception/module-cli": "*@dev",
+    "codeception/module-db": "*@dev",
+    "codeception/module-filesystem": "*@dev",
+    "codeception/module-phpbrowser": "*@dev",
+    "codeception/util-universalframework": "*@dev"
   }
 }
